text alignment gub fixed

--- a/styles/extre-small-screen-styles.css
+++ b/styles/extre-small-screen-styles.css
@@ -2,12 +2,13 @@
     .header-items-container {
         width: 100vw;
         height: 80px;
-        padding: 10px 50px;
+        padding: 10px 10px;
         box-shadow: 0 3px 6px 0 rgb(0 0 0 / 5%);
     }
     .header-items {
         width: 100%;
         height: 100%;
+        padding: 10px 10px;
         display: grid;
         grid-template: 1fr / 1fr 2fr 1fr;
         justify-content: space-between;
@@ -21,6 +22,9 @@
         font-weight: 500;
         letter-spacing: 1px;
         color: rgba(3, 31, 81, 0.981);
+    }
+    .portfolio-text span {
+        color: rgb(253, 106, 106);
     }
     .header-items{
         display: flex;
@@ -36,8 +40,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 0;
-        width: 50px;
+        gap: 20px;
+        width: auto;
     }
     .link-styles {
         font-size: 1.3vw;
@@ -45,6 +49,7 @@
     }
     .fa {
         color: rgba(3, 31, 81, 0.981);
+        font-size: 20px;
     }
     .menu-btn-holder {
         display: flex;
@@ -55,10 +60,11 @@
     }
     .fa-bars {
         font-size: 1.5rem;
+        display: inline-block;
     }
     .banner-section {
         width: 100vw;
-        height: calc(100vh - 80px);
+        height: auto;
         z-index: 0;
         padding: 10px 10px;
     }
@@ -66,7 +72,8 @@
         width: 100%;
         height: 100%;
         display: grid;
-        grid-template: 1fr / 9fr 1fr;
+        grid-template: auto auto auto / 1fr;
+        row-gap: 20px;
     }
     .about-section {
         display: grid;
@@ -76,13 +83,15 @@
         font-size: 0.5rem;
     }
     .social-media-link-holder {
+        width: 100vw;
+        height: auto;
+        padding: 5px 20px;
         display: flex;
         align-items: center;
         justify-content: center;
 
     }
     .follow-social ul{
-        transform: rotate(0deg);
         align-items: center;
         justify-content: center;
         row-gap: 10px;
@@ -90,16 +99,24 @@
     .follow-social {
         row-gap: 30px;
         display: flex;
-        flex-direction: column;
-        height: 200px;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: auto;
+    }
+    .my-fa {
+        font-size: 30px;
     }
     .about-content {
-        padding: 0;
+        padding: 10px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        gap: 1%;
+        gap: 5px;
+    }
+    .about-content span {
+        font-size: 18px;
     }
     .image-holder {
         display: flex;
@@ -107,17 +124,20 @@
         justify-content: center;
     }
     .image-holder img {
-        width: 80%;
+        width: 100%;
         height: auto;
     }
     .content-text {
         font-family: 'Libre Baskerville',serif;
-        font-size: 1rem;
+        font-size: 25px;
         color: rgba(3, 31, 81, 0.981);
+        text-align: center;
     }
     .content-discription {
         color: rgba(19, 47, 96, 0.981); 
-        font-size: 0.6rem;
+        font-size: 15px;
+        text-align: center;
+        font-family: 'Work Sans', sans-serif;
     }
     .services-section {
         width: 100vw;
